# apk_stock_market

./: .gitignore  stock-market-seq (BUY).wsd  stock-market-seq (SELL).wsd  stock-market-seq.wsd  stock-market.pu
StockMarketProject/: CMakeLists.txt  CMakeSettings.json  TraderClient.cpp  main.cpp
StockMarketProject/headers/: CommandBuilder.h  CommandFactory.h  StockBroker.h  StockPrinter.h  TransactionManager.h  TransactionUndoer.h  TypeList.h  Utility.h
StockMarketProject/headers/AccountManager/: AccountHolder.h  AccountManager.h
StockMarketProject/headers/Commands/: BuyStockCommand.h  Command.h  CommandBase.h  Commands.h  ListAllStockCommand.h  ListAllStocksCommand.h  ListAllTransactionsCommand.h  SellStockCommand.h  TraderAccountDepositCommand.h  TransactionBase.h  UndoLatestCommand.h
StockMarketProject/headers/Exceptions/: BadCommandException.h  BadMediatorConnectionException.h  NoPriceException.h  NoStockException.h
StockMarketProject/headers/Helpers/: IsNumeric.h  TimePrinter.h  UserLiterals.h  Utility.h
StockMarketProject/headers/Models/: Price.h  Stock.h
StockMarketProject/headers/Queries/: GetAllStockQuery.h  GetAllTransactionsQuery.h  GetLatestStockQuery.h  GetStockPriceQuery.h  GetStockQuery.h  GetTraderAccountQuery.h  Queries.h  Query.h
StockMarketProject/headers/StockBrokers/: StockBroker.h
StockMarketProject/headers/StockMediator/: Mediator.h  Placeholders.h  Stock.h  StockMediator.h
StockMarketProject/headers/StockPrices/: PriceProvider.h  StockMarketSimulator.h  StockPriceSimulator.h
StockMarketProject/headers/StockProviders/: StockProvider.h
StockMarketProject/headers/TraderAccount/: StandardTraderPolicy.h  StudentTraderPolicy.h  TraderAccount.h  TraderTopics.h
StockMarketProject/headers/TraderAccount/Policies/: StandardTraderPolicy.h  StudentTraderPolicy.h
StockMarketProject/source/: AccountManager.cpp
boost_signal_example/: CMakeLists.txt  main.cpp
boost_signal_example/GOF/: Collegue.h  Mediator.h
boost_signal_example/headers/: Helpers.h  Placeholders.h  StockMediator.h  StockProvider.h  TimeLiteral.h  TraderAccount.h  TraderTopics.h
stock-market/: StockMarketClassDiagram.eps
stock-market-seq (BUY)/: StockMarketSequenceDiagramBuy.eps
